<resources>
    <string name="app_name">Dnd-Inventory</string>
    <string name="Name">Item Name</string>
    <string name="item_type">item type</string>
    <string name="weight">Weight</string>
    <string name="amount">Amount</string>
    <string name="describtion">Description, Propterties, and Type Of</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_dice_format">Hit Dice: Ex "1d6"</string>
    <string name="magical">Magical item?</string>
</resources>
