<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="35dp"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/textview_show_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="@string/item_type"
        android:fontFamily="sans-serif"/>

    <ImageView
        android:id="@+id/image_is_magical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/magical" />
</LinearLayout>

    <TextView
        android:id="@+id/textview_show_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/Name" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textview_show_item_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/weight" />
    <TextView
        android:id="@+id/textview_show_item_Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/amount" />

</LinearLayout>
    <TextView
        android:id="@+id/textview_show_item_describtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/describtion" />
    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit"/>
</LinearLayout>